--- a/css/report.css
+++ b/css/report.css
@@ -1,5 +1,4 @@
 .report .title{
-    overflow: hidden;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -217,4 +216,4 @@
 .report .navTree ul li .navSub li .navThree li p{width: 17.5%;text-align: center;padding: 10px 20px;}
 .report .navTree ul li .navSub li .navThree li p:first-child{width: 30%;text-align: left;padding-left: 80px}
 .report .navTree ul li .navSub li .navThree li img{margin: 0}
-.report .listCon{overflow: hidden;display: none}
+.report .listCon{display: none}
