--- a/css/index.css
+++ b/css/index.css
@@ -236,7 +236,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 0;
+    padding: 10px 0 11px;
 }
 .index .rankCon .rankList li p{
     overflow: hidden;
