--- a/css/template.css
+++ b/css/template.css
@@ -189,7 +189,7 @@ body{
 }
 #header .quit img{width: 100%}
 #nav{
-    width: 160px;
+    width: 130px;
     position: fixed;
     top: 110px;
     left: 25px;
@@ -199,18 +199,18 @@ body{
     border-radius: 2px;
     box-shadow: 0 3px 18px rgba(0,0,0,.1);
 }
-#nav ul{margin-top: 32px}
+#nav ul{margin-top: 12px}
 #nav ul li{
     display: block;
     position: relative;
-    padding: 0 0 30px 0;
+    padding: 0 0 10px 0;
 }
 #nav ul li a{
     overflow: hidden;
     width: 100%;
     display: block;
     color: #333;
-    font-size: 18px;
+    font-size: 16px;
 }
 #nav ul li .first{
     overflow: hidden;
@@ -228,30 +228,30 @@ body{
 }
 #nav ul li span.ic1{
     background: url("../images/template/icon1.png") no-repeat center center;
-    background-size: 58px 60px;
+    background-size: 60%;
 }
 #nav ul li span.ic2{
     background: url("../images/template/icon2.png") no-repeat center center;
-    background-size: 64px 67px;
+    background-size: 60%;
 }
 #nav ul li span.ic3{
     background: url("../images/template/icon3.png") no-repeat center center;
-    background-size: 64px 53px;
+    background-size: 60%;
 }
 #nav ul li span.ic4{
     background: url("../images/template/icon4.png") no-repeat center center;
-    background-size: 60px 67px;
+    background-size: 60%;
 }
 #nav ul li span.ic5{
     background: url("../images/template/icon5.png") no-repeat center center;
-    background-size: 65px 65px;
+    background-size: 60%;
 }
 #nav ul li span.ic6{
     background: url("../images/template/icon6.png") no-repeat center center;
-    background-size: 70px 70px;
+    background-size: 60%;
 }
 #content{
-    padding: 110px 30px 0 215px;
+    padding: 110px 30px 0 185px;
     position: relative;
     z-index: 1;
     margin-bottom: 30px;
