--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,7 @@
     font-size: 14px;
     color: #333;
 }
+.index .conList .item p{cursor: pointer}
 .index .conList .item span{
     font-size: 30px;
     color: #02a7f4;
@@ -52,6 +53,7 @@
     align-items: center;
     padding-right: 20px;
     position: relative;
+    cursor: pointer
 }
 .index .conList .item-1 img{width: 14px;margin-right: 5px}
 .index .conList .item-1 p{
