--- a/css/login.css
+++ b/css/login.css
@@ -5,7 +5,8 @@
     height: 100%;
     position: absolute;
     width: 100%;
-    background: url("../images/template/bg.png") center;
+    background: url("../images/template/bg.png") no-repeat center;
+    background-size: 100% 100%;
 }
 #login{
     overflow: hidden;
