--- a/css/template.css
+++ b/css/template.css
@@ -174,10 +174,12 @@ body{
 }
 #header .logo span{
     overflow: hidden;
-    background: url("../images/template/logo.png") no-repeat;
+    /*background: url("../images/template/logo.png") no-repeat;
     background-size: 100% 100%;
     width: 160px;
-    height: 20px;
+    height: 20px;*/
+    font-size: 20px;
+    color: #fff;
 }
 #header .quit{
     position: absolute;
@@ -357,11 +359,11 @@ body{
     flex-wrap: wrap;
     margin: 0 10px;
 }
-.checkList p{font-size: 16px}
+.checkList p{font-size: 14px}
 .checkList .checkbox {
     display: none;
-    width: 18px!important;
-    height: 18px!important;
+    width: 16px!important;
+    height: 16px!important;
     border: solid 1px #80878b;
     margin-top: 0!important;
     line-height: normal!important;
@@ -371,10 +373,8 @@ body{
 .checkList .checkbox + label ,.checkbox{
     color: transparent;
     border: solid 1px #d8dce5;
-    width: 18px;
-    height: 18px;
-    font-size: 18px;
-    line-height: 18px;
+    width: 16px;
+    height: 16px;
     margin-right: 10px;
     background: transparent;
     cursor: pointer;
@@ -410,6 +410,61 @@ body{
     top: 3px;
     left: 3px;
     border-radius: 100%;
+}
+.pageNum{
+    display: inline-block;
+    float: right;
+    cursor: pointer;
+}
+.pageNum ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-end;
+}
+.pageNum ul li{
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 20px;
+}
+.pageNum ul li p{
+    overflow: hidden;
+    display: inline-block;
+    font-size: 14px;
+    margin: 0 2px;
+    width: auto!important;
+}
+.pageNum ul li em,.pageNum ul li span{
+    overflow: hidden;
+    width: 35px;
+    height: 35px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    color: #fff;
+    margin: 0 5px;
+}
+.pageNum ul li em{background: #d8dce5}
+.pageNum ul li span{background: #02a7f4}
+.pageNum ul li input{
+    overflow: hidden;
+    width: 50px;
+    height: 35px;
+    line-height: 35px;
+    border: solid 1px #d8dce5;
+    resize: none;
+    outline: none;
+    background: transparent;
+    cursor: pointer;
+    color: #333;
+    padding: 0 10px;
+    border-radius: 4px;
+    margin: 0 5px;
 }
 .tcHide{
     position: fixed;
