--- a/css/template.css
+++ b/css/template.css
@@ -475,6 +475,24 @@ body{
     border-radius: 4px;
     margin: 0 5px;
 }
+.crumbs {
+    width: 100%;
+    padding: 15px 20px;
+}
+.crumbs ul{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.crumbs ul li a,.crumbs ul li span{
+    overflow: hidden;
+    display: block;
+    color: #333;
+    font-size: 12px;
+}
+.crumbs ul li a:hover{color: #34bbfa}
+.crumbs ul li:first-child a{border-left: solid 5px #34bbfa;padding-left: 5px}
+.crumbs ul li:nth-child(even){margin: 0 5px}
 .tcHide{
     position: fixed;
     height: 100%;
@@ -499,7 +517,7 @@ body{
     z-index: 1113;
     margin: 0 auto;
     top: 15%;
-    width: 600px;
+    width: 800px;
     /*min-height: 200px;*/
     background: #fff;
     border-radius: 2px;
@@ -526,14 +544,23 @@ body{
     align-items: center;
     margin: 30px 0 0 50px;
 }
+.tcHide .tcCon .itemList.flexStart{align-items: flex-start}
+.tcHide .tcCon .itemList.paddingLeft{padding-left: 28%;padding-bottom: 20px}
+.tcHide .tcCon .itemList.paddingLeft a{margin-right: 5%}
 .tcHide .tcCon .itemList span{
     overflow: hidden;
     font-size: 14px;
     color: #333;
 }
+.tcHide .tcCon .itemList.special span{width: 30%}
 .tcHide .tcCon .itemList span em{
     display: inline-block;
     width: 140px;
+}
+.tcHide .tcCon .itemList span i{
+    display: block;
+    font-size: 12px;
+    color: #999;
 }
 .tcHide .tcCon .itemList input{
     overflow: hidden;
@@ -544,7 +571,7 @@ body{
     color: #333;
     cursor: pointer;
     border: solid 1px #d8dce5;
-    width: 70%;
+    width: 60%;
 }
 .tcHide .tcCon .itemErr{
     overflow: hidden;
